see #2089 - fix javadoc warning with jdk9
git-svn-id: http://josm.openstreetmap.de/svn/trunk@12406 0c6e7542-c601-0410-84e7-c038aed88b3b