@@ -355,6 +355,8 @@ Build-Date: ${build.tstamp}
             <arg value="java.base/sun.security.util=ALL-UNNAMED" if:set="isJava9" />
             <arg value="--add-exports" if:set="isJava9" />
             <arg value="java.base/sun.security.x509=ALL-UNNAMED" if:set="isJava9" />
+            <arg value="--add-exports" if:set="isJava9" />
+            <arg value="javafx.graphics/com.sun.javafx.application=ALL-UNNAMED" if:set="isJava9" />
         </javadoc>
     </target>
     <target name="clean" depends="init-properties">
